--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "877ee5be-130f-471f-9300-fbd396a46c7c"
 authors = ["Hao Zhang <hzhangphys@gmail.com>"]
 version = "1.0.0-DEV"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
+LinearAlgebra = "1.11.0"
+StaticArrays = "1.9.13"
 julia = "1.6.7"
 
 [extras]
