--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,12 @@ version = "1.0.0-DEV"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 LinearAlgebra = "1.11.0"
+NLsolve = "4.5.1"
 StaticArrays = "1.9.13"
 julia = "1.6.7"
 
