--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ LinearAlgebra = "1.11.0"
 NLsolve = "4.5.1"
 Optim = "1.13.2"
 StaticArrays = "1.9.13"
-julia = "1.6.7"
+julia = ">=1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
